--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@mastergo/plugin-typings": "^1.0.0",
+    "date-and-time": "^2.4.3",
+    "node-xlsx": "^0.21.0",
     "qiniu": "^7.8.0",
     "qiniu-js": "^3.4.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
